# repo_scout

./: .gitignore  README.md  pyproject.toml
repo_scout/: ai_prompt.py  cli.py  main.py  output.py  repo_root.py
repo_scout/commands/: changed.py  clear.py  dupes.py  largest.py  scan.py
repo_scout/database/: db.py  init_db.py  model.py  nodes.py  scan_runs.py
repo_scout/database/schema/: 00_up.sql
repo_scout/scan/: config.py  file_type.py  fileinfo.py  hash.py  hash_content.py  model.py  scan_node.py  scan_repo.py  tool_response.py
repo_scout/schema/: 00_up.sql
repo_scout/tools/: error.py  fs_read.py  fs_tree.py
schema/: 00_up.sql
src/: cli.py  main.py
src/tools/: fs_read.py  fs_tree.py  utils.py
tests/: test_db_insert.py  test_repo_root.py  test_scan_repo.py
