[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-scout"
version = "0.1.0"
description = "Repository scanning and inspection CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
scout = "repo_scout.main:main"

[tool.setuptools.package-data]
repo_scout = ["schema/*.sql"]

